--- a/CustomRPC/About.tr.resx
+++ b/CustomRPC/About.tr.resx
@@ -117,33 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>是的</value>
+  <data name="labelMadeBy.Text" xml:space="preserve">
+    <value>Yapan: maximmax42</value>
   </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>请稍等</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>115, 14</value>
-  </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>您要下载此更新吗？</value>
-  </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 18</value>
-  </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>不再检查更新</value>
-  </data>
-  <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>当前版本：
-最新版本：</value>
-  </data>
-  <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>跳过此版本</value>
+  <data name="buttonClose.Text" xml:space="preserve">
+    <value>Kapat</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>请查看新更新</value>
+    <value>Hakkında</value>
   </data>
 </root>
