--- a/CustomRPC/MainForm.ku.resx
+++ b/CustomRPC/MainForm.ku.resx
@@ -124,9 +124,6 @@
     <value>بەرنامەکە لە ترەیدا ئیش دەکا.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>161, 76</value>
-  </data>
   <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>160, 22</value>
   </data>
@@ -148,11 +145,8 @@
   <data name="trayMenuQuit.Text" xml:space="preserve">
     <value>دەرچوون</value>
   </data>
-  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>40, 20</value>
-  </data>
-  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>فایل</value>
+  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>161, 76</value>
   </data>
   <data name="loadPresetToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>228, 22</value>
@@ -184,11 +178,11 @@
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
     <value>دەرچوون</value>
   </data>
-  <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 20</value>
+  <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>40, 20</value>
   </data>
-  <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>ڕێکخستنەکان</value>
+  <data name="fileToolStripMenuItem.Text" xml:space="preserve">
+    <value>فایل</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>197, 22</value>
@@ -214,20 +208,20 @@
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>194, 6</value>
   </data>
+  <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
+    <value>بنەڕەت</value>
+  </data>
   <data name="languageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>197, 22</value>
   </data>
   <data name="languageToolStripMenuItem.Text" xml:space="preserve">
     <value>زمان</value>
   </data>
-  <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
-    <value>بنەڕەت</value>
+  <data name="settingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>83, 20</value>
   </data>
-  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 20</value>
-  </data>
-  <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>یارمەتی</value>
+  <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
+    <value>ڕێکخستنەکان</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>231, 22</value>
@@ -265,6 +259,12 @@
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
     <value>دەربارە...</value>
   </data>
+  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>57, 20</value>
+  </data>
+  <data name="helpToolStripMenuItem.Text" xml:space="preserve">
+    <value>یارمەتی</value>
+  </data>
   <data name="downloadUpdateToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>124, 20</value>
   </data>
@@ -277,14 +277,26 @@
   <data name="buttonUpdatePresence.ToolTip" xml:space="preserve">
     <value>شێوازەکەت نوێدەکاتەوە.</value>
   </data>
+  <data name="buttonConnect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>227, 50</value>
+  </data>
+  <data name="buttonConnect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>88, 24</value>
+  </data>
   <data name="buttonConnect.Text" xml:space="preserve">
     <value>پەیوەندی کردن</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
     <value>ئەمە پەیوەندی بەرنامەکەت لەگەڵ ئایدیەکەت دەکات.</value>
   </data>
+  <data name="buttonDisconnect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>327, 50</value>
+  </data>
+  <data name="buttonDisconnect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>88, 24</value>
+  </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
-    <value>پچڕان</value>
+    <value>انقطاع الاتصال</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
     <value>پەیوەندی بەرنامەکە دەپچڕێنێت لەگەڵ دیسکۆرد، تکایە ئاگەدار بە لەوانەیە کەمێکی پێ بچێت.</value>
